# python-devinstall

./: README.rst  pyproject.toml  setup.py
devinstall/: __init__.py
